fix: footer social media icons alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -52,7 +52,6 @@ a:hover {
 .social-media-links{
   display: flex;
   gap: 10px;
-  margin-left: -20px;
 }
 
 .social-media-links li {
